deps/LAGraph/include/LAGraph.h

#define LAGRAPH_INVALID_GRAPH                   (-1000)
#define LAGRAPH_SYMMETRIC_STRUCTURE_REQUIRED    (-1001)
#define LAGRAPH_NOT_CACHED                      (-1003)
LAGRAPH_PUBLIC
int LAGraph_Malloc
(
    void **p,               
    size_t nitems,          
    size_t size_of_item,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Calloc
(
    void **p,               
    size_t nitems,          
    size_t size_of_item,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Realloc
(
    void **p,               
    size_t nitems_new,      
    size_t nitems_old,      
    size_t size_of_item,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_Free            
(
    void **p,               
    char *msg
) ;
struct LAGraph_Graph_struct
{
    GrB_Matrix  A ;         
    LAGraph_Kind kind ;     
    GrB_Matrix AT ; 
    GrB_Vector out_degree ; 
    GrB_Vector in_degree ;  
    LAGraph_Boolean is_symmetric_structure ;    
    int64_t nself_edges ; 
    GrB_Scalar emin ;   
    LAGraph_State emin_state ;
    GrB_Scalar emax ;   
    LAGraph_State emax_state ;
} ;
typedef struct LAGraph_Graph_struct *LAGraph_Graph ;
LAGRAPH_PUBLIC
int LAGraph_Init
(
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGraph_CheckGraph
(
    LAGraph_Graph G,    
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGr_Init
(
    GrB_Mode mode,      
    void * (* user_malloc_function  ) (size_t),
    void * (* user_calloc_function  ) (size_t, size_t),
    void * (* user_realloc_function ) (void *, size_t),
    void   (* user_free_function    ) (void *),
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGr_SortByDegree
(
    int64_t **P,            
    const LAGraph_Graph G,  
    bool byout,             
    bool ascending,         
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGr_SampleDegree
(
    double *sample_mean,    
    double *sample_median,  
    const LAGraph_Graph G,  
    bool byout,             
    int64_t nsamples,       
    uint64_t seed,          
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGr_BreadthFirstSearch
(
    GrB_Vector *level,
    GrB_Vector *parent,
    const LAGraph_Graph G,
    GrB_Index src,
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGr_ConnectedComponents
(
    GrB_Vector *component,
    const LAGraph_Graph G,  
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGr_SingleSourceShortestPath
(
    GrB_Vector *path_length,
    const LAGraph_Graph G,
    GrB_Index src,
    GrB_Scalar Delta,           
    char *msg
) ;
LAGRAPH_PUBLIC
int LAGr_Betweenness
(
    GrB_Vector *centrality,     
    const LAGraph_Graph G,      
    const GrB_Index *sources,   
    int32_t ns,                 
    char *msg
) ;
typedef enum
{
    LAGr_TriangleCount_AutoMethod = 0,  
    LAGr_TriangleCount_Burkhardt = 1,   
    LAGr_TriangleCount_Cohen = 2,       
    LAGr_TriangleCount_Sandia_LL = 3,   
    LAGr_TriangleCount_Sandia_UU = 4,   
    LAGr_TriangleCount_Sandia_LUT = 5,  
    LAGr_TriangleCount_Sandia_ULT = 6,  
}
LAGr_TriangleCount_Method ;
typedef enum
{
    LAGr_TriangleCount_NoSort = 2,      
    LAGr_TriangleCount_Ascending = 1,   
    LAGr_TriangleCount_Descending = -1, 
    LAGr_TriangleCount_AutoSort = 0,    
}
LAGr_TriangleCount_Presort ;
LAGRAPH_PUBLIC
int LAGr_TriangleCount
(
    uint64_t *ntriangles,
    const LAGraph_Graph G,
    LAGr_TriangleCount_Method *method,
    LAGr_TriangleCount_Presort *presort,
    char *msg
) ;