graph/src/graph/graphblas/lagraph_bindings.rs

unsafe extern "C" {
    #[doc = " LAGr_Init: initializes GraphBLAS and LAGraph.  LAGr_Init is identical to\n @sphinxref{LAGraph_Init}, except that it allows the user application to\n specify the GraphBLAS mode.  It also provides four memory management\n functions, replacing the standard `malloc`, `calloc`, `realloc`, and `free`.\n The functions `user_malloc_function`, `user_calloc_function`,\n `user_realloc_function`, and `user_free_function` have the same signature as\n the ANSI C malloc, calloc, realloc, and free functions, respectively.  Only\n user_malloc_function and user_free_function are required.\n user_calloc_function may be NULL, in which case `LAGraph_Calloc` uses\n `LAGraph_Malloc` and `memset`.  Likewise, user_realloc_function may be NULL,\n in which case `LAGraph_Realloc` uses `LAGraph_Malloc`, `memcpy`, and\n `LAGraph_Free`.\n\n @param[in] mode                      the mode for GrB_Init\n @param[in] user_malloc_function      pointer to a malloc function\n @param[in] user_calloc_function      pointer to a calloc function, or NULL\n @param[in] user_realloc_function     pointer to a realalloc function, or NULL\n @param[in] user_free_function        pointer to a free function\n @param[in,out] msg                   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_INVALID_VALUE if LAGraph_Init or LAGr_Init has already been\n      called by the user application.\n @retval GrB_NULL_POINTER if user_malloc_function or user_free_function\n      are NULL.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGr_Init(
        mode: GrB_Mode,
        user_malloc_function: ::std::option::Option<
            unsafe extern "C" fn(arg1: usize) -> *mut ::std::os::raw::c_void,
        >,
        user_calloc_function: ::std::option::Option<
            unsafe extern "C" fn(arg1: usize, arg2: usize) -> *mut ::std::os::raw::c_void,
        >,
        user_realloc_function: ::std::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::std::os::raw::c_void,
                arg2: usize,
            ) -> *mut ::std::os::raw::c_void,
        >,
        user_free_function: ::std::option::Option<
            unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void),
        >,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGr_SortByDegree sorts the nodes of a graph by their out or in degrees.\n The graph G->A itself is not changed.  Refer to LAGr_TriangleCount for an\n example of how to permute G->A after calling this function.  The output &P\n must be freed by LAGraph_Free.  This method requires G->out_degree or\n G->in_degree to already be computed.\n\n @param[out] P        permutation of the integers 0..n-1.\n @param[in] G         graph of n nodes.\n @param[in] byout     if true, sort by out-degree, else sort by in-degree.\n @param[in] ascending if true, sort in ascending order, else descending.\n @param[in,out] msg   any error messages.\n\n @retval GrB_NULL_POINTER if P or G are NULL.\n @retval LAGRAPH_NOT_CACHED if G->in_degree or G->out_degree is not computed\n      (whichever one is required).\n @retval LAGRAPH_INVALID_GRAPH if G is invalid\n              (@sphinxref{LAGraph_CheckGraph} failed).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGr_SortByDegree(
        P: *mut *mut i64,
        G: LAGraph_Graph,
        byout: bool,
        ascending: bool,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGr_SampleDegree computes an estimate of the median and mean of the out or\n in degree, by randomly sampling the G->out_degree or G->in_degree vector.\n This method requires G->out_degree or G->in_degree to already be computed.\n\n @param[out] sample_mean      sampled mean of the degree.\n @param[out] sample_median    sampled median of the degree.\n @param[in] G         graph to sample.\n @param[in] byout     if true, sample out-degree, else sample in-degree.\n @param[in] nsamples  number of samples to take.\n @param[in] seed      random number seed.\n @param[in,out] msg   any error messages.\n\n @retval GrB_NULL_POINTER if sample_mean, sample_median, or G are NULL.\n @retval LAGRAPH_NOT_CACHED if G->in_degree or G->out_degree is not computed\n      (whichever one is required).\n @retval LAGRAPH_INVALID_GRAPH if G is invalid\n              (@sphinxref{LAGraph_CheckGraph} failed).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGr_SampleDegree(
        sample_mean: *mut f64,
        sample_median: *mut f64,
        G: LAGraph_Graph,
        byout: bool,
        nsamples: i64,
        seed: u64,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGr_BreadthFirstSearch: breadth-first search of a graph, computing the\n breadth-first-search tree and/or the level of the nodes encountered.  This\n is an Advanced algorithm.  G->AT and G->out_degree are required to use the\n fastest push/pull method when using SuiteSparse:GraphBLAS.  If these cached\n properties are not present, or if a vanilla GraphBLAS library is being used,\n then a push-only method is used (which can be slower).  G is not modified;\n that is, G->AT and G->out_degree are not computed if not already cached.\n\n @param[out]    level      If non-NULL on input, on successful return, it\n                           contains the levels of each node reached. The\n                           src node is assigned level 0. If a node i is\n                           not reached, level(i) is not present.  The level\n                           vector is not computed if NULL.\n @param[out]    parent     If non-NULL on input, on successful return, it\n                           contains parent node IDs for each node\n                           reached, where parent(i) is the node ID of the\n                           parent of node i.  The src node will have itself\n                           as its parent. If a node i is not reached,\n                           parent(i) is not present.  The parent vector is\n                           not computed if NULL.\n @param[in]     G          The graph, directed or undirected.\n @param[in]     src        The index of the src node (0-based)\n @param[in,out] msg        any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_INVALID_INDEX if src is invalid.\n @retval GrB_NULL_POINTER if both level and parent are NULL, or if\n      G is NULL.\n @retval LAGRAPH_INVALID_GRAPH Graph is invalid\n              (@sphinxref{LAGraph_CheckGraph} failed).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGr_BreadthFirstSearch(
        level: *mut GrB_Vector,
        parent: *mut GrB_Vector,
        G: LAGraph_Graph,
        src: GrB_Index,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGr_ConnectedComponents: connected components of an undirected graph.\n This is an Advanced algorithm (G->is_symmetric_structure must be known).\n\n @param[out] component    component(i)=s if node i is in the component whose\n                          representative node is s.  If node i has no edges,\n                          it is placed in its own component, and thus the\n                          component vector is always dense.\n @param[in] G             input graph to find the components for.\n                          The graph must be undirected, or\n                          G->is_symmetric_structure must be true.\n @param[in,out] msg       any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G or component are NULL.\n @retval LAGRAPH_INVALID_GRAPH Graph is invalid\n              (@sphinxref{LAGraph_CheckGraph} failed).\n @retval LAGRAPH_SYMMETRIC_STRUCTURE_REQUIRED if G is directed with an\n      unsymmetric G->A matrix.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGr_ConnectedComponents(
        component: *mut GrB_Vector,
        G: LAGraph_Graph,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGr_SingleSourceShortestPath: single-source shortest paths.  This is an\n Advanced algorithm (G->emin is required for best performance).  The graph G\n must have an adjacency matrix of type GrB_INT32, GrB_INT64, GrB_UINT32,\n GrB_UINT64, GrB_FP32, or GrB_FP64.  If G->A has any other type,\n GrB_NOT_IMPLEMENTED is returned.\n\n @param[out] path_length  path_length (i) is the length of the shortest\n     path from the source node to node i.  The path_length vector is dense.\n     If node (i) is not reachable from the src node, then path_length (i) is\n     set to INFINITY for GrB_FP32 and FP32, or the maximum integer for\n     GrB_INT32, INT64, UINT32, or UINT64.\n @param[in] G         input graph.\n @param[in] src       source node.\n @param[in] Delta     for delta stepping.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G or path_length are NULL.\n @retval GrB_INVALID_INDEX if src is invalid.\n @retval GrB_EMPTY_OBJECT if Delta does not contain a value.\n @retval GrB_NOT_IMPLEMENTED if the type is not supported.\n @retval LAGRAPH_INVALID_GRAPH Graph is invalid\n              (@sphinxref{LAGraph_CheckGraph} failed).\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGr_SingleSourceShortestPath(
        path_length: *mut GrB_Vector,
        G: LAGraph_Graph,
        src: GrB_Index,
        Delta: GrB_Scalar,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " LAGr_Betweenness: betweeness centrality metric.  This methods computes an\n approximation of the betweeness-centrality metric of all nodes in the graph.\n Only a few given source nodes are used for the approximation.  This is an\n Advanced algorithm (G->AT is required).\n\n @param[out] centrality   centrality(i) is the metric for node i.\n @param[in] G         input graph.\n @param[in] sources   source vertices to compute shortest paths, size ns\n @param[in] ns        number of source vertices.\n @param[in,out] msg   any error messages.\n\n @retval GrB_SUCCESS if successful.\n @retval GrB_NULL_POINTER if G, centrality, and/our sources are NULL.\n @retval GrB_INVALID_INDEX if any source node is invalid.\n @retval LAGRAPH_INVALID_GRAPH Graph is invalid\n              (@sphinxref{LAGraph_CheckGraph} failed).\n @retval LAGRAPH_NOT_CACHED if G->AT is required but not present.\n @returns any GraphBLAS errors that may have been encountered."]
    pub fn LAGr_Betweenness(
        centrality: *mut GrB_Vector,
        G: LAGraph_Graph,
        sources: *const GrB_Index,
        ns: i32,
        msg: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
